# digma

./: AGENTS.md  Cargo.toml  Makefile  PLAN.MD  README.md  bacon.toml  phase3_history_plan.md  refactor_engine.md
crates/app_wasm/: Cargo.toml  Makefile
crates/app_wasm/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: camera.rs  drag.rs  engine.rs  history.rs  input.rs  lib.rs  ops.rs  render_scene.rs  session.rs  types.rs
crates/renderer_wgpu/: Cargo.toml
crates/renderer_wgpu/src/: lib.rs  shader.wgsl
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.test.tsx  App.tsx  createCanvasInputController.ts  createWasmApp.ts  editorTypes.ts  index.css  utils.ts
