[package]
name = "app_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
engine = { path = "../engine/" }
wasm-bindgen = "0.2.108"
web-sys = { version = "*", features = ["HtmlCanvasElement"] }
wasm-bindgen-futures = "0.4.58"
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
