[package]
name = "renderer_wgpu"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
engine = { path = "../engine" }
wgpu = { version = "28.0.0", default-features = false, features = ["webgpu", "wgsl"] }
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = ["HtmlCanvasElement"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
